# pySNOM

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test-job.yml
conda/: meta.yaml
docs/source/: conf.py  index.md
pySNOM/: NeaImager.py  NeaSpectra.py  __init__.py  defaults.py  images.py  interferograms.py  pySNOM.py  readers.py  spectra.py
pySNOM/datasets/: 2024-07-20 120104 PH fs+E-NP-line28 O3P raw.gsf  image.gwy  sp.txt  testPsHet O3A raw.gsf  test_xyz_read.xyz
pySNOM/examples/: imageprocess.ipynb  spectrumprocess.ipynb
pySNOM/tests/: test_NeaImage.py  test_NeaSpectrum.py  test_functions.py  test_interferograms.py  test_process.py  test_readers.py  test_spectra.py  test_transform.py
