[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pySNOM"
requires-python = ">=3.10"
dynamic = ["dependencies", "version"]
authors = [
  {name = "Gergely Németh", email = "ngergihun@gmail.com"},
  {name = "Ferenc Borondics", email = "ferenc.borondics@synchrotron-soleil.fr"},
]
maintainers = [
  {name = "Gergely Németh", email = "ngergihun@gmail.com"}
]
description = "Python tools for SNOM data processing."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["snom", "near-field", "data processing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "pySNOM.__version__"}
